crates/ship-policy/src/snapshots/ship_policy__tests__render_denied.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &[])"
---
<routing>Cannot address @Amos: Mate cannot address human directly</routing>
