crates/ship-policy/src/snapshots/ship_policy__tests__render_guidance.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &[])"
---
<routing>You stopped without submitting. Call mate_submit with a summary of what you accomplished.</routing>
