crates/ship-policy/src/snapshots/ship_policy__tests__render_no_hints.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &[])"
---
<message from="Jordan">
hello human
</message>
