crates/ship-policy/src/snapshots/ship_policy__tests__render_question.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="Jordan">
Should I use async here?
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
