crates/ship-policy/src/snapshots/ship_policy__tests__render_submitted.snap
---
source: crates/ship-policy/src/tests.rs
expression: "render_for_prompt(&delivery, &hints)"
---
<message from="Jordan">
I've submitted my work for review: Refactored auth middleware
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
