crates/ship-policy/src/snapshots/ship_policy__tests__wrap_captain_steer_to_mate.snap
---
source: crates/ship-policy/src/tests.rs
expression: wrapped
---
<message from="Cedar">
Focus on the error handling first, the UI can wait.
</message>
<routing>Act on this correction and continue working.</routing>
