crates/ship-policy/src/snapshots/ship_policy__tests__wrap_mate_to_captain.snap
---
source: crates/ship-policy/src/tests.rs
expression: wrapped
---
<message from="Jordan">
I&#039;ve completed the refactor and all tests pass.
</message>
<routing>Reply to mate: @Jordan · Reply to human: @Amos</routing>
